--- a/index.html
+++ b/index.html
@@ -1,20 +1,92 @@
-<html>
+<!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="./css/main.css">
-  <title>ta pegando, vai trabalhar</title>
+  <meta charset="UTF-8" />
+  <title>AJuDe: welcome!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
+<body class="fullScreen">
+  <div class="container" >
+    <a class="links" id="paracadastro"></a>
+    <a class="links" id="paralogin"></a>
 
-<body>
-  <header class="menu-principal">
-    <div class="cabecalho">
+    <div class="content">
+      <!--FORMULÁRIO DE LOGIN-->
+      <div id="login">
+        <form method="post" action="">
+          <h1>Login</h1>
+          <p>
+            <label for="nome_login">Seu nome</label>
+            <input id="nome_login" name="nome_login" required="required" type="text" placeholder="ex. joao@exemplo.com"/>
+          </p>
 
-      <div class="logo">
-        <img src="./img/logomain.png" />
+          <p>
+            <label for="email_login">Seu e-mail</label>
+            <input id="email_login" name="email_login" required="required" type="password" placeholder="ex. senha" />
+          </p>
+
+          <p>
+            <input type="checkbox" name="manterlogado" id="manterlogado" value="" />
+            <label for="manterlogado">Manter-me logado</label>
+          </p>
+
+          <p>
+            <input type="submit" value="Logar" onclick="window.location='./campanhas.html';" />
+          </p>
+
+          <p class="link">
+            Ainda não tem conta?
+            <a href="#paracadastro">Cadastre-se</a>
+            <br>
+            <br>
+            <br>
+            <a href="#paracadastro">Visualizar campanhas ativas</a>
+          </p>
+        </form>
       </div>
 
+      <!--FORMULÁRIO DE CADASTRO-->
+      <div id="cadastro">
+        <form method="post" action="">
+          <h1>Cadastro</h1>
+
+          <p>
+            <label for="primeiro_nome_cad">Seu primeiro nome</label>
+            <input id="primeiro_nome_cad" name="primeiro_nome_cad" required="required" type="text" placeholder="primeiro nome" />
+          </p>
+
+          <p>
+            <label for="ultimo_nome_cad">Seu ultimo nome</label>
+            <input id="ultimo_nome_cad" name="ultimo_nome_cad" required="required" type="text" placeholder="ultimo nome" />
+          </p>
+
+          <p>
+            <label for="email_cad">Seu e-mail</label>
+            <input id="email_cad" name="email_cad" required="required" type="email" placeholder="joao@exemplo.com"/>
+          </p>
+
+          <p>
+            <label for="cartao_cad">Seu numero do cartao de credito</label>
+            <input id="cartao_cad" name="cartao_cad" required="required" type="number" min="0000000000000000" max="9999999999999999" placeholder="ex. 1234567890123456"/>
+          </p>
+
+
+          <p>
+            <label for="senha_cad">Sua senha</label>
+            <input id="senha_cad" name="senha_cad" required="required" type="password" placeholder="ex. 1234"/>
+          </p>
+
+          <p>
+            <input type="submit" value="Cadastrar"/>
+          </p>
+
+          <p class="link">
+            Já tem conta?
+            <a href="#paralogin"> Ir para Login </a>
+          </p>
+        </form>
+      </div>
     </div>
-
-  </header>
+  </div>
 </body>
-
 </html>
