--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
 
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
                 <img class="home" src="img/logomain.png" width="90" height="90">
             </a>
 
@@ -37,11 +37,13 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main class="main_content">
         <div class="content">
+            <br>
             <h1>Bem vindo ao AJuDE!</h1>
+            <br>
             <h2> Navegue pelas nossas campanhas...</h2>
-
+            <br>
             <form class="pure-form" id="campanhaForm" onsubmit="return false">
                 <input type="text" id="campanhaSearchBar" autocomplete="off" class="pure-input-rounded"
                     placeholder="Pesquisar campanhas pelo nome">
@@ -99,11 +101,10 @@
 
     <footer class="footer">
         <div>
-            <h4>Copyright © 2019 AJuDE, developed by Klaywert D. and Mathias A. at Federal University of Campina Grande. All rights reserved.</h4>
+            <h6>Copyright © 2019 AJuDE, developed by Klaywert D. and Mathias A. at Federal University of Campina Grande. All rights reserved.</h6>
         </div>
     </footer>
 
     <script src="js/script.js"></script>
-</body>
 </body>
 </html>
