Scripts referentes a autenticação adicionados

--- a/campanhas_ranking.html
+++ b/campanhas_ranking.html
@@ -37,7 +37,7 @@
     </header>
 
     <div id="rankBySelectorContainer">
-        ORDENAR CAMPANHAS POR:
+        <h3>ORDENAR CAMPANHAS POR:</h3>
         <ul class="rankBySelector">
             <li>
                 <input type="image" class="rankBySelectorOptions" id="rankByLikeNumb" src="./img/like.png"
