Resolvendo pendências em login e cadastro

--- a/index.html
+++ b/index.html
@@ -106,5 +106,7 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script type="module" src="js/login.js"></script>
+
 </body>
 </html>
