Erro do CORS corrigido. Eventuais erros que estavam impedindo o login e o cadastro também foram solucionados.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <input type="password" id="passwdInpSignin" name="password" placeholder="Senha">
                 </fieldset>
 
-                <input type="submit" value="SingIn" class="pure-button" id="signInBt">
+                <input type="submit" value="Login" class="pure-button" id="signInBt">
             </form>
         </div>
     </div>
@@ -82,7 +82,7 @@
                     <input type="password" id="passwdInpSignUp" name="password" placeholder="Senha">
                 </fieldset>
 
-                <input type="submit" value="SignUp" class="pure-button" id="signUpBt">
+                <input type="submit" value="Cadastrar" class="pure-button" id="signUpBt">
             </form>
         </div>
     </div>
