Ajustes na estilização em css

--- a/campanhas_ranking.html
+++ b/campanhas_ranking.html
@@ -8,16 +8,16 @@
         integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="./css/main.css"/>
       <link rel="stylesheet" type="text/css" href="./css/campanhasRanking.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
-    <header class="main_header">
+    <header class="main-header">
         <div class="container">
 
-            <nav class="main_nav">
-                <ul class="main_nav_list">
+            <nav class="main-nav">
+                <ul class="main-nav-list">
                     <li>
                         <button class="header_bt" id="rankingBt">Ranking de campanhas</button>
                     </li>
@@ -28,8 +28,8 @@
                 <img class="home" src="./img/logomain.png" width="90" height="90">
             </a>
 
-            <nav class="main_nav">
-                <ul class="main_nav_list" id="userEntries">
+            <nav class="main-nav">
+                <ul class="main-nav-list" id="userEntries">
                 </ul>
             </nav>
 
@@ -57,7 +57,7 @@
         </ul>
     </div>
 
-    <main class="ranking_container"></main>
+    <main class="ranking-container"></main>
 
     <div id="signInMod">
         <div class="modContent">
