Corrigi umas ortográfias erradas, corrigi o dimensionamento do cadastro, porém perdi centralidade.

--- a/campanhas_ranking.html
+++ b/campanhas_ranking.html
@@ -37,21 +37,21 @@
     </header>
 
     <div id="rankBySelectorContainer">
-        <h3>ORDENAR CAMPANHAS POR:</h3>
+        <h3>MOSTRAR CAMPANHAS POR:</h3>
         <ul class="rankBySelector">
             <li>
                 <input type="image" class="rankBySelectorOptions" id="rankByLikeNumb" src="./img/like.png"
-                    title="Maior numero de curtidas">
+                    title="Maior numero de likes.">
             </li>
 
             <li>
                 <input type="image" class="rankBySelectorOptions" id="rankByDataNumb" src="./img/calendario.png"
-                    title="Proximidade da data de termino">
+                    title="Proximidade da data de término.">
             </li>
 
             <li>
                 <input type="image" class="rankBySelectorOptions" id="rankByMetaNumb" src="./img/linha-de-chegada.png"
-                    title ="Mais proximo de atingir a meta de arrecadaçao">
+                    title ="Mais longr de atingir a meta de arrecadação.">
             </li>
 
         </ul>
@@ -84,7 +84,7 @@
                     <input type="text" name="lastName" id="lastNameInp" placeholder="Ultimo Nome">
                     <br>
                     <input type="email" id="emailInpSignup" name="email" placeholder="Email">
-                    <input type="number" id="emailInpSignup" name="cartao" placeholder="Numero do cartao de credito">
+                    <input type="number" id="cartaoInpSignup" name="cartao" placeholder="Numero do cartao de credito">
                     <input type="password" id="passwdInpSignUp" name="password" placeholder="Senha">
                 </fieldset>
 
