--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 
   <meta charset="UTF-8" />
-  <title>AJuDe: welcome!</title>
+  <title>AJuDe: Bem vindo!</title>
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
         integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./css/main.css"/>
@@ -46,7 +46,7 @@
             <br>
             <form class="pure-form" id="campanhaForm" onsubmit="return false">
                 <input type="text" id="campanhaSearchBar" autocomplete="off" class="pure-input-rounded"
-                    placeholder="Pesquisar campanhas pelo nome">
+                    placeholder="Pesquisar Campanhas">
             </form>
         </div>
     </main>
@@ -78,7 +78,7 @@
                     <input type="text" name="lastName" id="lastNameInp" placeholder="Ultimo Nome">
                     <br>
                     <input type="email" id="emailInpSignup" name="email" placeholder="Email">
-                    <input type="number" id="cartaoInpSignup" name="cartao" placeholder="Numero do cartao de credito">
+                    <input type="number" id="cartaoInpSignup" name="cartao" placeholder="Número do cartão de crédito">
                     <input type="password" id="passwdInpSignUp" name="password" placeholder="Senha">
                 </fieldset>
 
