--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="main-nav-list">
                     <li>
                         <a href="campanhas_ranking.html">
-                            <button class="header_bt" id="rankingBt">Ranking de campanhas</button>
+                            <button class="header_bt" id="rankingBt">Mudar criterio de ordenacao</button>
                         </a>
                     </li>
                 </ul>
