Ajeitei um pequeno mal entendido na organização das pastas e scripts

--- a/campanhas_ranking.html
+++ b/campanhas_ranking.html
@@ -100,8 +100,9 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
-    <script type="module" src="js/login.js"></script>
+    <script src="../js/script.js"></script>
+    <script type="module" src="../js/login.js"></script>
+    <script type="module" src="../js/ordenacao.js"></script>
 </body>
 
 
