--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <meta charset="UTF-8" />
   <title>AJuDe: Bem vindo!</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
         integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./css/main.css"/>
@@ -104,9 +105,9 @@
         </div>
     </footer>
 
-    <script src="scripts/script.js"></script>
-    <script type="module" src="scripts/login.js"></script>
-    <script type="module" src="scripts/usuario.js"></script>
+    <script src="../js/script.js"></script>
+    <script type="module" src="../js/login.js"></script>
+    <script type="module" src="../js/campanha.js"></script>
 
 </body>
 </html>
